-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2024-08-19
-
0
ShardingCatalogManager::_updateClusterCardinalityParameter could fail due to ConflictingOperationInProgress when another ConfigsvrCoordinator runs concurrently.
SERVER-91973 tried to solve the issue by applying a sleep&retry pattern upon that error, however getEffectiveStatus doesn't throw so the sleep&retry logic never gets triggered.