SERVER-93144 Fix sleep&retry logic in ShardingCatalogManager::_updateClusterCardinalityParameter (#25739)

GitOrigin-RevId: 4ebe37f1aebfc1eaa09b4ae4940a06725168bc93